removed pre-loader

--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -34,14 +34,7 @@
 </head>
 
 <body>
-
-	<!-- START PRELOADER -->
-	<div id="page-preloader">
-		<div class="theme-loader">Bitfonix</div>
-	</div>
-	<!-- END PRELOADER --> 
-	
-	<!-- START HEADER SECTION -->
+ 	<!-- START HEADER SECTION -->
 	<header class="main-header header-1">
 		<!-- START TOP AREA -->
 		<div class="top-area">
@@ -78,7 +71,7 @@
 					<div class="col-lg-5 col-md-3 col-sm-6 col-7 mx-auto pl-0 mb-lg-0 mb-5">
 						<div class="logo">
 							<a href="index-2.html">
-							   <img class="img-fluid" src="{% static 'assets/img/logo.png' %}" alt="">
+							   <!-- <img class="img-fluid" src="{% static 'assets/img/logo.png' %}" alt=""> -->
 							</a>
 						</div>
 					</div>
@@ -331,7 +324,7 @@
                         </ul>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-12 copyright-text text-center text-lg-right text-md-right">
-                        <p><a href="https://www.templateshub.net" target="_blank">Templates Hub</a></p>
+                        <p><a href="" target="_blank">Check Hub</a></p>
                     </div>
                 </div>
             </div>
