--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -34,7 +34,14 @@
 </head>
 
 <body>
- 	<!-- START HEADER SECTION -->
+
+	<!-- START PRELOADER -->
+	<div id="page-preloader">
+		<div class="theme-loader">No Name</div>
+	</div>
+	<!-- END PRELOADER --> 
+	
+	<!-- START HEADER SECTION -->
 	<header class="main-header header-1">
 		<!-- START TOP AREA -->
 		<div class="top-area">
