fixed error page

--- a/bitcoin_pages/templates/bitcoin_pages/index.html
+++ b/bitcoin_pages/templates/bitcoin_pages/index.html
@@ -317,7 +317,7 @@
 					<div class="promo-content">
 						<h4>Who we are?</h4>
 						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illodrut inventore veritatis et quasi architecto beatae vitae dicta sunt. </p>
-						<a href="#" class="btn-style btn-filled mt-3">Read More <i class="icofont icofont-caret-right"></i></a>
+						<a href="{% url 'about-us' %}" class="btn-style btn-filled mt-3">Read More <i class="icofont icofont-caret-right"></i></a>
 						<div class="signature-img float-lg-right float-md-right float-none mt-3"><img src="{% static 'assets/img/bg/signature.png' %}" class="img-fluid" alt=""></div>
 					</div>	
 				</div>
