--- a/templates/404.html
+++ b/templates/404.html
@@ -105,74 +105,87 @@
 				</div>
 			</div>
 		</div>
-		<!-- END LOGO AREA -->
-
-		<!-- START NAVIGATION AREA -->
-		<div class="sticky-menu">
-			<div class="mainmenu-area">
-				<div class="auto-container">
-					<div class="row">
-						<div class="col-lg-9 d-none d-lg-block d-md-none">
-							<nav class="navbar navbar-expand-lg justify-content-left">
-								<ul class="navbar-nav">
-									<li><a href="{% url 'index' %}" class="active nav-link">Home</a></li>
-									<li class="dropdown"><a class="nav-link" href="#">Pages</a>
-										<ul class="dropdown-menu">
-											<li><a href="about.html">About Us</a></li>
-											<li><a href="team.html">Our Team</a></li>
-											<li><a href="single-team.html">Team Single</a></li>
-											<li><a href="gallery.html">Gallery</a></li>
-											<li><a href="pricing.html">Our Pricing</a></li>
-											<li><a href="faq.html">FAQ</a></li>
-											<li><a href="error.html">404</a></li>
-										</ul>
-									</li>
-									<li class="dropdown"><a href="service.html" class="nav-link">Services</a>
-										<ul class="dropdown-menu">
-											<li><a href="service.html">Our All Services</a></li>
-											<li><a href="single-service.html">Bitcoin Trading</a></li>
-											<li><a href="single-service.html">Coin Buy & Sell</a></li>
-											<li><a href="single-service.html">Bitcoin & Ethereum</a></li>
-											<li><a href="single-service.html">Cryptocurrency</a></li>
-										</ul>
-									</li>
-									<li class="dropdown"><a href="buy.html" class="nav-link">Coin</a>
-										<ul class="dropdown-menu">
-											<li><a href="buy.html">Buy & Sell</a></li>
-											<li><a href="data.html">Analyze</a></li>
-											<li><a href="wallet.html">wallet</a></li>
-											<li><a href="exchange.html">Exchange</a></li>
-										</ul>
-									</li>
-									<li class="dropdown"><a href="blog.html" class="nav-link">News</a>
-										<ul class="dropdown-menu">
-											<li><a href="blog.html">Latest News</a></li>
-											<li><a href="single-blog.html">Single News</a></li>
-										</ul>
-									</li>
-									<li><a href="{% url 'about-us' %}" class="nav-link">About Us</a></li>
-									<li><a href="{% url 'contact' %}" class="nav-link">Contact</a></li>
-								</ul>
-							</nav>
-						</div>
-						<div class="col-lg-3 d-none d-lg-block d-md-none text-right pr-0">
-							<form class="navbar-form">
-								<div class="form-group">
-									<input class="form-control" name="search" value="Search here..." type="text">
-									<button type="submit" class="btn"><i class="fa fa-search-plus"></i></button>
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- END NAVIGATION AREA -->	
+		<!-- END LOGO AREA -->	
 	</header>
 	<!-- END HEADER SECTION -->
 	
-    {% block content %}
-    {% endblock %}
+    	<!-- START PAGE BANNER AND BREADCRUMBS -->
+	<section id="page-banner">
+		<div class="single-page-title-area overlay" data-background="{% static 'assets/img/bg/slide1.jpg' %}">
+			<div class="auto-container">
+				<div class="row">
+					<div class="col-12 text-center">
+						<div class="single-page-title">
+							<h2>404 Error page</h2>
+							<p>Lorem ipsum dolor sit amet</p>
+						</div>
+					</div>
+				</div>
+				<!-- end row-->
+			</div>
+		</div>
+		<div class="single-page-title-area-bottom">
+			<div class="auto-container">
+				<div class="row">
+					<div class="col-12 text-center">
+						<ol class="breadcrumb">
+							<li class="breadcrumb-item"><a href="#">Home</a></li>
+							<li class="breadcrumb-item active">404</li>
+						</ol>
+					</div>
+				</div>
+				<!-- end row-->
+			</div>
+		</div>
+	</section>
+	<!-- END PAGE BANNER AND BREADCRUMBS -->
+	
+	<!-- START 404 SECTION -->
+    <section id="team" class="section-padding">
+        <div class="container">	 
+			<div class="row text-center">
+				<div class="col-lg-8 col-md-8 col-8 mx-auto">
+					<div class="error-page-wrap">
+					    <h3>4<i class="icofont icofont-optic"></i>4</h3>
+						<h4>Sorry! Page Not Found</h4>
+						<p>Page you are looking for counld not be found</p>
+						<a href="{% url 'index' %}" class="btn-style btn-filled btn-filled-2"><i class="icofont icofont-ui-home"></i>Back to home</a>
+					</div>
+				</div>
+				<!-- end col -->
+			</div>
+			<!-- end row -->
+        </div>
+        <!--- END CONTAINER -->
+    </section>
+    <!-- END 404 SECTION -->
+	
+	<!-- START NEWSLETTER SECTION -->
+    <div id="errornews" class="errorsection-padding bg-gray">
+        <div class="container">	 
+			<div class="row text-center">
+				<div class="col-lg-8 col-md-8 col-8 mx-auto">
+					<div class="error-search">
+						<h4 class="mb-5">Dailly Newsletter Signup</h4>
+						<form action="#" method="post">
+							<div class="row">
+								<div class="form-group col-lg-11 col-md-10 col-12 p-0">
+									<input type="search" name="esearch" class="form-control" placeholder="Email address here">
+								</div>
+								<div class="form-group col-lg-1 col-md-2 col-6 p-0 mt-lg-0 mt-md-0 mt-3">
+									<button type="submit" class="btn-style btn-filled btn-filled-2">SUBSCRIBE</button>
+								</div>
+							</div>
+						</form>
+					</div>
+				</div>
+				<!-- end col -->
+			</div>
+			<!-- end row -->
+        </div>
+        <!--- END CONTAINER -->
+    </div>
+    <!-- END NEWSLETTER SECTION -->
 	
     <!-- START FOOTER -->
     <footer>
@@ -219,7 +232,7 @@
 								<li><a href="#"><i class="fa fa-chevron-circle-right"></i> Client feedback</a></li>
 								<li><a href="#"><i class="fa fa-chevron-circle-right"></i> Buy & Sell</a></li>
 								<li><a href="#"><i class="fa fa-chevron-circle-right"></i> Bitcoin Trade</a></li>
-								<li><a href="{% url 'faq' %}"><i class="fa fa-chevron-circle-right"></i> Faq </a></li>
+								<li><a href="{% url 'faq' %}"><i class="fa fa-chevron-circle-right"></i> Market Price </a></li>
 							</ul>
 						</div>	
                     </div>
