--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -29,7 +29,19 @@
     <!-- Style CSS --> 
     <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
     <!-- Responsive  CSS -->
-    <link rel="stylesheet" href="{% static 'assets/css/responsive.css' %}">
+	<link rel="stylesheet" href="{% static 'assets/css/responsive.css' %}">
+
+	
+	<link rel="stylesheet" href="{% static 'dashboard/assets/vendor_components/bootstrap/dist/css/bootstrap.css' %}">
+	
+	<!-- Bootstrap extend-->
+	<link rel="stylesheet" href="{% static 'dashboard/css/bootstrap-extend.css' %}">
+    
+	<!--amcharts -->
+	<link href="{% static 'dashboard/www.amcharts.com/lib/3/plugins/export/export.css' %}" rel="stylesheet" type="text/css" />
+	
+	<!-- theme style -->
+	<link rel="stylesheet" href="{% static 'dashboard/css/master_style.css' %}">
 </head>
 
 <body>
@@ -56,11 +68,15 @@
 					<!-- end col -->
 					<div class="col-lg-4 col-md-12 col-sm-12 col-12">
 						<div class="info-menu">
-							<ul>
-								<li><a href="#"><i class="icofont icofont-login"></i> Login </a></li>
-								<li><a href="#"><i class="icofont icofont-user-alt-5"></i> Register </a></li>
+							<ul>{% if user.is_authenticated %}
+								<li><a href="{% url 'logout' %}"><i class="icofont icofont-login"></i> Logout </a></li>
+								{% else %}
+								<li><a href="{% url 'login' %}"><i class="icofont icofont-login"></i> Login </a></li>
+								<li><a href="{% url 'create' %}"><i class="icofont icofont-user-alt-5"></i> Register </a></li>
+								{% endif %}
 								<li><a href="#"><i class="icofont icofont-hand-drag2"></i> Help </a></li>
 								<li><a href="#"><i class="icofont icofont-live-support"></i> Support </a></li>
+								
 							</ul>
 						</div>
 					</div> 
