cleaned up authentication template

--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -1,12 +1,55 @@
 {% extends "base_layout.html" %}
-{% block title %}{{ block.super }} Login{% endblock title %}
+{% load static %}
+{% block title %}{{ block.super }} - Login{% endblock title %}
 
 {% block content %}
-<div>
-    <div class="row">
-        <div>
-            {% include "registration/login_form.html" %}
+	<!-- START PAGE BANNER AND BREADCRUMBS -->
+	<section id="page-banner">
+		<div class="single-page-title-area overlay" data-background="{% static 'assets/img/bg/slide1.jpg' %}">
+			<div class="auto-container">
+				<div class="row">
+					<div class="col-12 text-center">
+						<div class="single-page-title">
+							<h2>Login</h2>
+							<p>Login To Your Account</p>
+						</div>
+					</div>
+				</div>
+				<!-- end row-->
+			</div>
+		</div>
+		<div class="single-page-title-area-bottom">
+			<div class="auto-container">
+				<div class="row">
+					<div class="col-12 text-center">
+						<ol class="breadcrumb">
+							<li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
+							<li class="breadcrumb-item active">Login</li>
+						</ol>
+					</div>
+				</div>
+				<!-- end row-->
+			</div>
+		</div>
+	</section>
+	<!-- END PAGE BANNER AND BREADCRUMBS -->
+	
+	<!-- START CONTACT SECTION -->
+    <section id="contactpage" class="section-padding">
+        <div class="container">
+			<!-- end section title -->
+			<div class="row">
+                <div class="col-lg-7 mx-auto">
+					<div class="contact-form-wrapper">
+						<div class="contact-form">
+                            {% include 'registration/login_form.html' %}
+                        </div>
+                    </div>
+                </div>
+			</div>
+			<!-- end row -->
         </div>
-    </div>
-</div>
-{% endblock content %}
+        <!--- END CONTAINER -->
+    </section>
+    <!-- END CONTACT SECTION -->
+{% endblock %}
