--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -379,7 +379,7 @@
 		 <div class="ulogo">
 			 <a href="index-2.html">
 			  <!-- logo for regular state and mobile devices -->
-			  <span><b>Unique </b>Admin</span>
+			  <span><b>Bitfonix </b>Admin</span>
 			</a>
 		</div>
         <div class="image">
@@ -468,219 +468,7 @@
             <li><a href="pages/UI/timeline.html">Timeline</a></li>
             <li><a href="pages/UI/timeline-horizontal.html">Horizontal Timeline</a></li>			  
           </ul>
-        </li>
-        <li class="header nav-small-cap">FORMS, TABLE & LAYOUTS</li>
-		<li class="treeview">
-          <a href="#">
-            <i class="fa fa-bars"></i>
-            <span>Widgets</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-right pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li><a href="pages/widgets/blog.html">Blog</a></li>
-            <li><a href="pages/widgets/chart.html">Chart</a></li>
-            <li><a href="pages/widgets/list.html">List</a></li>
-            <li><a href="pages/widgets/social.html">Social</a></li>
-            <li><a href="pages/widgets/statistic.html">Statistic</a></li>
-            <li><a href="pages/widgets/tiles.html">Tiles</a></li>
-            <li><a href="pages/widgets/weather.html">Weather</a></li>
-            <li><a href="pages/widgets/widgets.html">Widgets</a></li>
-          </ul>
-        </li>
-        <li class="treeview">
-          <a href="#">
-            <i class="fa fa-files-o"></i>
-            <span>Layout Options</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-right pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li><a href="pages/layout/boxed.html">Boxed</a></li>
-            <li><a href="pages/layout/fixed.html">Fixed</a></li>
-            <li><a href="pages/layout/collapsed-sidebar.html">Collapsed Sidebar</a></li>
-          </ul>
-        </li>		
-		<li class="treeview">
-          <a href="#">
-            <i class="fa fa-square-o"></i>
-            <span>Box</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-right pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li><a href="pages/box/advanced.html">Advanced</a></li>
-            <li><a href="pages/box/basic.html">Boxed</a></li>
-            <li><a href="pages/box/color.html">Color</a></li>
-			<li><a href="pages/box/group.html">Group</a></li>
-          </ul>
-        </li>
-        <li class="treeview">
-          <a href="#">
-            <i class="fa fa-pie-chart"></i>
-            <span>Charts</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-right pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li><a href="pages/charts/chartjs.html">ChartJS</a></li>
-            <li><a href="pages/charts/flot.html">Flot</a></li>
-            <li><a href="pages/charts/inline.html">Inline charts</a></li>
-            <li><a href="pages/charts/morris.html">Morris</a></li>
-            <li><a href="pages/charts/peity.html">Peity</a></li>
-            <li><a href="pages/charts/chartist.html">Chartist</a></li>
-            <li><a href="pages/charts/rickshaw-charts.html">Rickshaw Charts</a></li>
-            <li><a href="pages/charts/nvd3-charts.html">NVD3 Charts</a></li>
-          </ul>
-        </li>
-        <li class="treeview">
-          <a href="#">
-            <i class="fa fa-edit"></i> <span>Forms</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-right pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li><a href="pages/forms/advanced.html">Advanced Elements</a></li>
-            <li><a href="pages/forms/code-editor.html">Code Editor</a></li>
-            <li><a href="pages/forms/editor-markdown.html">Markdown</a></li>
-            <li><a href="pages/forms/editors.html">Editors</a></li>
-            <li><a href="pages/forms/form-validation.html">Form Validation</a></li>
-            <li><a href="pages/forms/form-wizard.html">Form Wizard</a></li>
-            <li><a href="pages/forms/general.html">General Elements</a></li>
-            <li><a href="pages/forms/mask.html">Formatter</a></li>
-            <li><a href="pages/forms/premade.html">Pre-made Forms</a></li>
-            <li><a href="pages/forms/xeditable.html">Xeditable Editor</a></li>
-          </ul>
-        </li>
-        <li class="treeview">
-          <a href="#">
-            <i class="fa fa-table"></i> <span>Tables</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-right pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li><a href="pages/tables/simple.html">Simple tables</a></li>
-            <li><a href="pages/tables/data.html">Data tables</a></li>
-            <li><a href="pages/tables/editable-tables.html">Editable Tables</a></li>
-            <li><a href="pages/tables/table-color.html">Table Color</a></li>
-          </ul>
-        </li>
-		<li>
-          <a href="pages/email/index.html">
-            <i class="fa fa-envelope-open-o"></i> <span>Emails</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-right pull-right"></i>
-            </span>
-          </a>
-        </li>
-		<li class="header nav-small-cap">EXTRA COMPONENTS</li>
-        <li class="treeview">
-          <a href="#">
-            <i class="fa fa-map"></i> <span>Map</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-right pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li><a href="pages/map/map-google.html">Google Map</a></li>
-            <li><a href="pages/map/map-vector.html">Vector Map</a></li>
-          </ul>
-        </li>
-		<li class="treeview">
-          <a href="#">
-            <i class="fa fa-plug"></i> <span>Extension</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-right pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li><a href="pages/extension/fullscreen.html">Fullscreen</a></li>
-          </ul>
-        </li>        
-		<li class="treeview">
-          <a href="#">
-            <i class="fa fa-file"></i> <span>Sample Pages</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-right pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li><a href="pages/samplepage/blank.html">Blank</a></li>
-            <li><a href="pages/samplepage/coming-soon.html">Coming Soon</a></li>
-            <li><a href="pages/samplepage/custom-scroll.html">Custom Scrolls</a></li>
-			<li><a href="pages/samplepage/faq.html">FAQ</a></li>
-			<li><a href="pages/samplepage/gallery.html">Gallery</a></li>
-			<li><a href="pages/samplepage/invoice.html">Invoice</a></li>
-			<li><a href="pages/samplepage/lightbox.html">Lightbox Popup</a></li>
-			<li><a href="pages/samplepage/pace.html">Pace</a></li>
-			<li><a href="pages/samplepage/pricing.html">Pricing</a></li>
-            <li class="treeview">
-              <a href="#">Authentication 
-                <span class="pull-right-container">
-              <i class="fa fa-angle-right pull-right"></i>
-            </span>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="{% url 'logout' %}">Logout</a></li>
-                <!-- <li><a href="pages/samplepage/register.html">Register</a></li>
-                <li><a href="pages/samplepage/lockscreen.html">Lockscreen</a></li>
-                <li><a href="pages/samplepage/user-pass.html">Recover password</a></li>				   -->
-              </ul>
-            </li>            
-			<li class="treeview">
-              <a href="#">Error Pages 
-                <span class="pull-right-container">
-              <i class="fa fa-angle-right pull-right"></i>
-            </span>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="pages/samplepage/404.html">404</a></li>
-                <li><a href="pages/samplepage/500.html">500</a></li>
-                <li><a href="pages/samplepage/maintenance.html">Maintenance</a></li>		  
-              </ul>
-            </li> 
-          </ul>
-        </li>
-        <li class="treeview">
-          <a href="#">
-            <i class="fa fa-share"></i> <span>Multilevel</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-right pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li><a href="#">Level One</a></li>
-            <li class="treeview">
-              <a href="#">Level One
-                <span class="pull-right-container">
-              <i class="fa fa-angle-right pull-right"></i>
-            </span>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="#">Level Two</a></li>
-                <li class="treeview">
-                  <a href="#">Level Two
-                    <span class="pull-right-container">
-              <i class="fa fa-angle-right pull-right"></i>
-            </span>
-                  </a>
-                  <ul class="treeview-menu">
-                    <li><a href="#">Level Three</a></li>
-                    <li><a href="#">Level Three</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </li>
-            <li><a href="#">Level One</a></li>
-          </ul>
-        </li>        
-        
+        </li> 
       </ul>
     </section>
   </aside>
