--- a/users/templates/registration/user_create.html
+++ b/users/templates/registration/user_create.html
@@ -1,193 +1,154 @@
 {% extends "base_layout.html" %}
+{% load static %}
 {% block title %}{{ block.super }} - Create Account{% endblock title %}
 
 {% block content %}
-<div>
-    <!-- <form action="{% url 'create' %}" method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Create New Account</button>
-    </form> -->
-  <!-- <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <h2>Sign up</h2>
-      <form method="post">
-        {% csrf_token %}
-        {% for field in form %}
-          <p>
-            {{ field.label_tag }}<br>
-            {{ field }}
-            {% if field.help_text %}
-              <small style="color: grey">{{ field.help_text }}</small>
-            {% endif %}
-            {% for error in field.errors %}
-              <p style="color: red">{{ error }}</p>
-            {% endfor %}
-          </p>
-        {% endfor %}
-        <button type="submit">Sign up</button>
-      </form> -->
-
-
-    <div class="box">
-        <div class="box-header with-border">
-          <h3 class="box-title">Registeration Form</h3>
-          <h6 class="box-subtitle">Please provide accurate credentials</h6>
-        </div>
-        <!-- /.box-header -->
-        <div class="box-body">
-          <div class="row">
-            <div class="col">
-            	<form method="POST" enctype="multipart/form-data">
+	<!-- START PAGE BANNER AND BREADCRUMBS -->
+	<section id="page-banner">
+		<div class="single-page-title-area overlay" data-background="{% static 'assets/img/bg/slide1.jpg' %}">
+			<div class="auto-container">
+				<div class="row">
+					<div class="col-12 text-center">
+						<div class="single-page-title">
+							<h2>Registeration</h2>
+							<p>Create Your Account</p>
+						</div>
+					</div>
+				</div>
+				<!-- end row-->
+			</div>
+		</div>
+		<div class="single-page-title-area-bottom">
+			<div class="auto-container">
+				<div class="row">
+					<div class="col-12 text-center">
+						<ol class="breadcrumb">
+							<li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
+							<li class="breadcrumb-item active">Registeration</li>
+						</ol>
+					</div>
+				</div>
+				<!-- end row-->
+			</div>
+		</div>
+	</section>
+	<!-- END PAGE BANNER AND BREADCRUMBS -->
+	
+	<!-- START CONTACT SECTION -->
+    <section id="contactpage" class="section-padding">
+        <div class="container">
+			<div class="row">
+				<div class="col-12 text-center">
+					<div class="section-title">
+						<h5>Register your Account</h5>
+						<h3>with <span>Bitfonix</span></h3>
+					</div>
+				</div>
+			</div>
+			<!-- end section title -->
+			<div class="row">
+				<div class="col-12 text-center">
+					<div class="section-title-2">
+						<h3>Registeration Form</h3>
+					</div>
+				</div>
+				<div class="col-lg-7 mx-auto">
+					<div class="contact-form-wrapper">
+						<div class="contact-form">
+							<form class="form" name="enq" method="POST" action="" enctype="multipart/form-data">
                 {% csrf_token %}
-					      <div class="form-group">
-						      <h5>{{ form.first_name.label }}<span class="text-danger">*</span></h5>
-						      <div class="controls">
+								<div class="row">
+									<div class="form-group col-12 mb-3">
+										<label>{{ form.first_name.label }}</label>
                     {{ form.first_name }}
-                  </div>
                     {% if form.first_name.errors %}
-                  <ul>
-                    {% for error in form.first_name.errors %}
-                    <li><em>{{ error }}</em> </li>
-                    {% endfor %}
-                  </ul>
+                    <ul>
+                      {% for error in form.first_name.errors %}
+                      <li><em>{{ error }}</em> </li>
+                      {% endfor %}
+                    </ul>
                     {% endif %}
-                </div>
+                  </div>
 
-                <div class="form-group">
-						    <h5>{{ form.last_name.label }} <span class="text-danger">*</span></h5>
-						    <div class="controls">
-                  {{ form.last_name }}
-                </div>
-                  {% if form.last_name.errors %}
-                <ul>
-                  {% for error in form.last_name.errors %}
-                  <li><em>{{ error }}</em> </li>
-                  {% endfor %}
-                </ul>
-                  {% endif %}
-                </div>
-                
-					      <div class="form-group">
-						      <h5>{{ form.email.label }} <span class="text-danger">*</span></h5>
-						      <div class="controls">
+                  <div class="form-group col-12 mb-3">
+										<label>{{ form.last_name.label }}</label>
+                    {{ form.last_name }}
+                    {% if form.last_name.errors %}
+                    <ul>
+                      {% for error in form.last_name.errors %}
+                      <li><em>{{ error }}</em> </li>
+                      {% endfor %}
+                    </ul>
+                    {% endif %}
+                  </div>
+
+                  <div class="form-group col-12 mb-3">
+										<label>{{ form.email.label }}</label>
                     {{ form.email }}
+                    {% if form.email.errors %}
+                    <ul>
+                      {% for error in form.email.errors %}
+                      <li><em>{{ error }}</em> </li>
+                      {% endfor %}
+                    </ul>
+                    {% endif %}
                   </div>
-                  {% if form.first_name.errors %}
-                  <ul>
-                    {% for error in form.first_name.errors %}
-                    <li><em>{{ error }}</em> </li>
-                    {% endfor %}
-                  </ul>
-                  {% endif %}
-                </div>    
 
-                <div class="form-group">
-						      <h5>Date of Birth <span class="text-danger">*</span></h5>
-						      <div class="controls">
-                    {{ form.birth_date }} 
-                  </div>
-                  {% if form.birth_date.errors %}
-                  <ul>
-                    {% for error in form.birth_date.errors %}
-                    <li><em>{{ error }}</em> </li>
-                    {% endfor %}
-                  </ul>
-                  {% endif %}
-                </div>
-
-                <div class="form-group">
-                  <h5>Select Gender <span class="text-danger">*</span></h5>
-                  <div class="controls">
+                  <div class="form-group col-12 mb-3">
+										<label>{{ form.gender.label }}</label>
                     {{ form.gender }}
+                    {% if form.gender.errors %}
+                    <ul>
+                      {% for error in form.gender.errors %}
+                      <li><em>{{ error }}</em> </li>
+                      {% endfor %}
+                    </ul>
+                    {% endif %}
                   </div>
-                  {% if form.gender.errors %}
-                  <ul>
-                    {% for error in form.gender.errors %}
-                    <li><em>{{ error }}</em> </li>
-                    {% endfor %}
-                  </ul>
-                  {% endif %}
-                </div>
-                
-					      <div class="form-group">
-                  <h5>Password <span class="text-danger">*</span></h5>
-                  <div class="controls">
-                    {{ form.password1 }}
+
+                  <div class="form-group col-12 mb-3">
+                    <label>Password</label>
+                    <div class="form-controls">
+                      {{ form.password1 }}
+                    </div>
+                    {% if form.password1.errors %}
+                    <ul>
+                      {% for error in form.password1.errors %}
+                      <li><em>{{ error }}</em> </li>
+                      {% endfor %}
+                    </ul>
+                    {% endif %}
                   </div>
-                  {% if form.password1.errors %}
-                  <ul>
-                    {% for error in form.password1.errors %}
-                    <li><em>{{ error }}</em> </li>
-                    {% endfor %}
-                  </ul>
-                  {% endif %}
-                </div>
-                
-					      <div class="form-group">
-						      <h5>Confirm Password <span class="text-danger">*</span></h5>
-						      <div class="controls">
-                    {{ form.password2 }}
+
+                  <div class="form-group col-12 mb-3">
+										<label>Confirm Password</label>
+                    <div class="form-controls">
+                      {{ form.password2 }}
+                    </div>
+                    {% if form.password2.errors %}
+                    <ul>
+                      {% for error in form.password2.errors %}
+                      <li><em>{{ error }}</em> </li>
+                      {% endfor %}
+                    </ul>
+                    {% endif %}
                   </div>
-                  {% if form.password2.errors %}
-                  <ul>
-                    {% for error in form.password2.errors %}
-                    <li><em>{{ error }}</em> </li>
-                    {% endfor %}
-                  </ul>
-                  {% endif %}
-                </div>
-                
-					      <!-- <div class="form-group">
-						      <h5>Picture upload <span class="text-danger">*</span></h5>
-						      <div class="controls">
-                    {{ form.picture }} 
-                  </div>
-                  {% if form.picture.errors %}
-                  <ul>
-                    {% for error in form.picture.errors %}
-                    <li><em>{{ error }}</em> </li>
-                    {% endfor %}
-                  </ul>
-                  {% endif %}
-					      </div> -->
-					      <div class="text-xs-right">
-						      <button type="submit" class="btn btn-info">Create Account</button>
-					      </div>
-				  </form>
-            	
-            </div>
-           <!--/.col -->
-          </div>
-          <!-- /.row -->
+                  
+									<div class="form-group col-lg-12 mb-0 text-center">
+										<div class="actions">
+											<input value="Create Your Account" name="submit" id="submitButton" class="btn btn-contact-bg" title="Create Your Account" type="submit">
+											<img src="{% static 'assets/img/ajax-loader.gif' %}" id="loader" style="display:none" alt="loading" width="16" height="16">
+										</div>
+									</div>
+								</div>
+							</form>								
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- end row -->
         </div>
-        <!-- /.box-body-->
-      </div>
-</div>
+        <!--- END CONTAINER -->
+    </section>
+    <!-- END CONTACT SECTION -->
 {% endblock %}
