more authentication cleanup

--- a/users/templates/registration/logged_out.html
+++ b/users/templates/registration/logged_out.html
@@ -6,7 +6,7 @@
     <div class="row">
         <p>You've Succesfully logged out.</p>
         <div>
-            {% include "user/login_form.html" 
+            {% include "registeration/login_form.html" 
             with login_button='Log Back In'%}
         </div>
     </div>
