--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -57,12 +57,14 @@
 					<div class="col-lg-4 col-md-12 col-sm-12 col-12">
 						<div class="info-menu">
 							<ul>{% if user.is_authenticated %}
+								<li><a href="{% url 'dashboard' %}"><i class="icofont icofont-dashboard"></i> Dashboard </a></li>
 								<li><a href="{% url 'logout' %}"><i class="icofont icofont-login"></i> Logout </a></li>
 								{% else %}
 								<li><a href="{% url 'login' %}"><i class="icofont icofont-login"></i> Login </a></li>
 								<li><a href="{% url 'create' %}"><i class="icofont icofont-user-alt-5"></i> Register </a></li>
-								{% endif %}
 								<li><a href="#"><i class="icofont icofont-hand-drag2"></i> Help </a></li>
+								{% endif %}
+								
 								<li><a href="#"><i class="icofont icofont-live-support"></i> Support </a></li>
 								
 							</ul>
