--- a/users/templates/registration/login_form.html
+++ b/users/templates/registration/login_form.html
@@ -12,5 +12,5 @@
         {% endfor %}
       </p>
     {% endfor %}
-    <button type="submit">Sign up</button>
+    <button type="submit">Login</button>
 </form>
