fixed dashboard header

--- a/dashboard/templates/base_dash.html
+++ b/dashboard/templates/base_dash.html
@@ -50,13 +50,12 @@
     <a href="index-2.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
 	  <b class="logo-mini">
-		  <span class="light-logo"><img src="{% static 'dashboard/images/logo-light.png' %}" alt="logo"></span>
-		  <span class="dark-logo"><img src="{% static 'dashboard/images/logo-dark.png' %}" alt="logo"></span>
+		  <span class="light-logo">Bitfonix</span>
+		  <span class="dark-logo"></span>
 	  </b>
       <!-- logo for regular state and mobile devices -->
       <span class="logo-lg">
-		  <img src="{% static 'dashboard/images/logo-light-text.png' %}" alt="logo" class="light-logo">
-	  	  <img src="{% static 'dashboard/images/logo-dark-text.png' %}" alt="logo" class="dark-logo">
+        Dashboard
 	  </span>
     </a>
     <!-- Header Navbar -->
