--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -36,16 +36,10 @@
 	
 	<!-- START CONTACT SECTION -->
     <section id="contactpage" class="section-padding">
-        <div class="container">
+        <div class="container-fluid">
 			<!-- end section title -->
 			<div class="row">
-                <div class="col-lg-7 mx-auto">
-					<div class="contact-form-wrapper">
-						<div class="contact-form">
-                            {% include 'registration/login_form.html' %}
-                        </div>
-                    </div>
-                </div>
+                {% include 'registration/login_form.html' %}
 			</div>
 			<!-- end row -->
         </div>
