--- a/static/dashboard/css/bootstrap-extend.css
+++ b/static/dashboard/css/bootstrap-extend.css
@@ -6441,6 +6441,7 @@ label
 {
     white-space: normal; 
     word-wrap: break-word;
+    overflow-wrap: break-word;
     -webkit-hyphens: auto;
        -moz-hyphens: auto;
             hyphens: auto;
