--- a/transactions/templates/transactions/form.html
+++ b/transactions/templates/transactions/form.html
@@ -29,7 +29,8 @@
         <div class="box-body">
           <div class="row">
             <div class="col">
-            	<form novalidate>
+            	<form action="" method="POST">
+					{% csrf_token %}
 					<div class="form-group">
 						<h5>Fullname <span class="text-danger">*</span></h5>
 						<div class="controls">
@@ -43,30 +44,33 @@
 					<div class="form-group">
 						<h5>Select Amount <span class="text-danger">*</span></h5>
 						<div class="controls">
-							<select name="select" id="select" required class="form-control">
-								<option value="">Select Your starting price</option>
-								<option value="1">500$</option>
-								<option value="2">750$</option>
-								<option value="3">1,000$</option>
-								<option value="4">2,000$</option>
-                                <option value="5">5,000$</option>
-                                <option value="5">7,000$</option>
-                                <option value="5">10,000$</option>
-							</select>
+							{{ form.amount }}
 						</div>
+						{% if form.amount.errors %}
+						<ul>
+							{% for error in form.amount.errors %}
+							<li><em>{{ error }}</em> </li>
+							{% endfor %}
+						</ul>
+						{% endif %}
 					</div>
 					<div class="row">
 						<div class="col-md-6">
 							<div class="form-group">
 								<h5>Select payment method <span class="text-danger">*</span></h5>
+								{% for radio in form.payment_option %}
 								<fieldset class="controls">
-									<input name="group1" type="radio" id="radio_1" value="1" required>
-									<label for="radio_1">Bitcoin</label>
+									{{ radio.tag }}
+									<label for="{{ radio.id_for_label }}">{{ radio.choice_label }}</label>
+									{% if radio.errors %}
+									<ul>
+										{% for error in radio.errors %}
+										<li><em>{{ error }}</em> </li>
+										{% endfor %}
+									  </ul>
+									{% endif %}
 								</fieldset>
-								<fieldset>
-									<input name="group1" type="radio" id="radio_2" value="2">
-									<label for="radio_2">Bank Deposit</label>									
-								</fieldset>
+								{% endfor %}
 							</div>
 						</div>
 					</div>
