--- a/users/templates/registration/user_create.html
+++ b/users/templates/registration/user_create.html
@@ -3,7 +3,9 @@
 {% block title %}{{ block.super }} - Create Account{% endblock title %}
 
 {% block content %}
-	<!-- START PAGE BANNER AND BREADCRUMBS -->
+  <!-- START PAGE BANNER AND BREADCRUMBS -->
+
+
 	<section id="page-banner">
 		<div class="single-page-title-area overlay" data-background="{% static 'assets/img/bg/slide1.jpg' %}">
 			<div class="auto-container">
@@ -17,7 +19,7 @@
 				</div>
 				<!-- end row-->
 			</div>
-		</div>
+    </div>
 		<div class="single-page-title-area-bottom">
 			<div class="auto-container">
 				<div class="row">
@@ -36,115 +38,113 @@
 	
 	<!-- START CONTACT SECTION -->
     <section id="contactpage" class="section-padding">
-        <div class="container">
-			<div class="row">
-				<div class="col-12 text-center">
-					<div class="section-title">
-						<h5>Register your Account</h5>
-						<h3>with <span>Bitfonix</span></h3>
-					</div>
-				</div>
-			</div>
+      <div class="container-fluid">
 			<!-- end section title -->
 			<div class="row">
-				<div class="col-12 text-center">
-					<div class="section-title-2">
-						<h3>Registeration Form</h3>
+				
+        <div class="container-fluid">
+					<div class="body-cover">
+                    <div class="signup-content">
+                        <form method="POST" id="signup-form" class="signup-form" enctype="multipart/form-data">
+                          {% csrf_token %}
+                            <h2 class="form-title">Sign Up</h2>
+                            <div class="form-group">
+                              {{ form.first_name }}
+                              {% if form.first_name.errors %}
+                              <ul>
+                                {% for error in form.first_name.errors %}
+                                <li><em>{{ error }}</em> </li>
+                                {% endfor %}
+                              </ul>
+                              {% endif %}
+                            </div>
+                            <div class="form-group">
+                              {{ form.last_name }}
+                              {% if form.last_name.errors %}
+                              <ul>
+                                {% for error in form.last_name.errors %}
+                                <li><em>{{ error }}</em> </li>
+                                {% endfor %}
+                              </ul>
+                              {% endif %}
+                            </div>
+                            <div class="form-group">
+                              {{ form.email }}
+                              {% if form.email.errors %}
+                              <ul>
+                                {% for error in form.email.errors %}
+                                <li><em>{{ error }}</em> </li>
+                                {% endfor %}
+                              </ul>
+                              {% endif %}
+                            </div>
+                            <div class="form-group">
+                              {{ form.password1 }}
+                              {% if form.password1.errors %}
+                              <ul>
+                                {% for error in form.password1.errors %}
+                                <li><em>{{ error }}</em> </li>
+                                {% endfor %}
+                              </ul>
+                              {% endif %}
+                            </div>
+                            <div class="form-group">
+                              {{ form.password2 }}
+                              {% if form.password2.errors %}
+                              <ul>
+                                {% for error in form.password2.errors %}
+                                <li><em>{{ error }}</em> </li>
+                                {% endfor %}
+                              </ul>
+                              {% endif %}
+                            </div>
+                            <div class="form-row">
+                              <!-- <div class="form-group col-lg-6">
+                                <label for="exampleFormControlFile1">Image Upload</label>
+                                <input type="file" class="form-control-file" id="exampleFormControlFile1">
+                              </div> -->
+                              <div class="form-group col-lg-6">
+                                <label for="inputGender">Upload Profile Picture</label>
+                                <div class="form-group">
+                                  {{ form.picture }}
+                                  {% if form.picture.errors %}
+                                  <ul>
+                                    {% for error in form.picture.errors %}
+                                    <li><em>{{ error }}</em> </li>
+                                    {% endfor %}
+                                  </ul>
+                                  {% endif %}
+                                </div>
+                            </div>
+
+                              <div class="form-group col-lg-6">
+                                  <label for="inputGender">Gender</label>
+                                  <div class="form-group">
+                                    {{ form.gender }}
+                                    {% if form.gender.errors %}
+                                    <ul>
+                                      {% for error in form.gender.errors %}
+                                      <li><em>{{ error }}</em> </li>
+                                      {% endfor %}
+                                    </ul>
+                                    {% endif %}
+                                  </div>
+                              </div>
+                            </div>
+                            <!-- <div class="form-group">
+                                <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
+                                <label for="agree-term" class="label-agree-term"><span><span></span></span>I agree all statements in  <a href="#" class="term-service">Terms of service</a></label>
+                            </div> -->
+                            <div class="form-group">
+                                <input type="submit" name="submit" id="submit" class="form-submit" value="Sign up"/>
+                            </div>
+                        </form>
+                        <p class="loginhere">
+                            Have already an account ? <a href="#" class="loginhere-link">Login here</a>
+                        </p>
 					</div>
-				</div>
-				<div class="col-lg-7 mx-auto">
-					<div class="contact-form-wrapper">
-						<div class="contact-form">
-							<form class="form" name="enq" method="POST" action="" enctype="multipart/form-data">
-                {% csrf_token %}
-								<div class="row">
-									<div class="form-group col-12 mb-3">
-										<label>{{ form.first_name.label }}</label>
-                    {{ form.first_name }}
-                    {% if form.first_name.errors %}
-                    <ul>
-                      {% for error in form.first_name.errors %}
-                      <li><em>{{ error }}</em> </li>
-                      {% endfor %}
-                    </ul>
-                    {% endif %}
-                  </div>
-
-                  <div class="form-group col-12 mb-3">
-										<label>{{ form.last_name.label }}</label>
-                    {{ form.last_name }}
-                    {% if form.last_name.errors %}
-                    <ul>
-                      {% for error in form.last_name.errors %}
-                      <li><em>{{ error }}</em> </li>
-                      {% endfor %}
-                    </ul>
-                    {% endif %}
-                  </div>
-
-                  <div class="form-group col-12 mb-3">
-										<label>{{ form.email.label }}</label>
-                    {{ form.email }}
-                    {% if form.email.errors %}
-                    <ul>
-                      {% for error in form.email.errors %}
-                      <li><em>{{ error }}</em> </li>
-                      {% endfor %}
-                    </ul>
-                    {% endif %}
-                  </div>
-
-                  <div class="form-group col-12 mb-3">
-										<label>{{ form.gender.label }}</label>
-                    {{ form.gender }}
-                    {% if form.gender.errors %}
-                    <ul>
-                      {% for error in form.gender.errors %}
-                      <li><em>{{ error }}</em> </li>
-                      {% endfor %}
-                    </ul>
-                    {% endif %}
-                  </div>
-
-                  <div class="form-group col-12 mb-3">
-                    <label>Password</label>
-                    <div class="form-controls">
-                      {{ form.password1 }}
-                    </div>
-                    {% if form.password1.errors %}
-                    <ul>
-                      {% for error in form.password1.errors %}
-                      <li><em>{{ error }}</em> </li>
-                      {% endfor %}
-                    </ul>
-                    {% endif %}
-                  </div>
-
-                  <div class="form-group col-12 mb-3">
-										<label>Confirm Password</label>
-                    <div class="form-controls">
-                      {{ form.password2 }}
-                    </div>
-                    {% if form.password2.errors %}
-                    <ul>
-                      {% for error in form.password2.errors %}
-                      <li><em>{{ error }}</em> </li>
-                      {% endfor %}
-                    </ul>
-                    {% endif %}
-                  </div>
-                  
-									<div class="form-group col-lg-12 mb-0 text-center">
-										<div class="actions">
-											<input value="Create Your Account" name="submit" id="submitButton" class="btn btn-contact-bg" title="Create Your Account" type="submit">
-											<img src="{% static 'assets/img/ajax-loader.gif' %}" id="loader" style="display:none" alt="loading" width="16" height="16">
-										</div>
-									</div>
-								</div>
-							</form>								
-						</div>
 					</div>
-				</div>
+                </div>
 			</div>
 			<!-- end row -->
         </div>
