--- a/dashboard/templates/base_dash.html
+++ b/dashboard/templates/base_dash.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load cropping %}
+{% include "messages.html" %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -48,7 +49,7 @@
 
   <header class="main-header">
     <!-- Logo -->
-    <a href="index-2.html" class="logo">
+    <a href="{% url 'dashboard' %}" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
 	  <b class="logo-mini">
 		  <span class="light-logo">Bitfonix</span>
@@ -168,155 +169,20 @@
               <i class="fa fa-bell"></i>
             </a>
             <ul class="dropdown-menu scale-up">
-              <li class="header">You have 7 notifications</li>
+              <li class="header">You have new notifications</li>
               <li>
                 <!-- inner menu: contains the actual data -->
                 <ul class="menu inner-content-div">
+                  {% for notification in notifications %}
                   <li>
                     <a href="#">
-                      <i class="fa fa-users text-aqua"></i> Curabitur id eros quis nunc suscipit blandit.
+                      <i class="fa fa-users text-aqua"></i> {{ notification.message }}.
                     </a>
                   </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-warning text-yellow"></i> Duis malesuada justo eu sapien elementum, in semper diam posuere.
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-users text-red"></i> Donec at nisi sit amet tortor commodo porttitor pretium a erat.
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-shopping-cart text-green"></i> In gravida mauris et nisi
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-user text-red"></i> Praesent eu lacus in libero dictum fermentum.
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-user text-red"></i> Nunc fringilla lorem 
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-user text-red"></i> Nullam euismod dolor ut quam interdum, at scelerisque ipsum imperdiet.
-                    </a>
-                  </li>
+                  {% endfor %}
                 </ul>
               </li>
               <li class="footer"><a href="#">View all</a></li>
-            </ul>
-          </li>
-          <!-- Tasks -->
-          <li class="dropdown tasks-menu">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <i class="fa fa-tasks"></i>
-            </a>
-            <ul class="dropdown-menu scale-up">
-              <li class="header">You have 6 tasks</li>
-              <li>
-                <!-- inner menu: contains the actual data -->
-                <ul class="menu inner-content-div">
-                  <li><!-- Task item -->
-                    <a href="#">
-                      <h3>
-                        Lorem ipsum dolor sit amet
-                        <small class="pull-right">30%</small>
-                      </h3>
-                      <div class="progress xs">
-                        <div class="progress-bar progress-bar-aqua" style="width: 30%" role="progressbar"
-                             aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                          <span class="sr-only">30% Complete</span>
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                  <!-- end task item -->
-                  <li><!-- Task item -->
-                    <a href="#">
-                      <h3>
-                        Vestibulum nec ligula
-                        <small class="pull-right">20%</small>
-                      </h3>
-                      <div class="progress xs">
-                        <div class="progress-bar progress-bar-danger" style="width: 20%" role="progressbar"
-                             aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                          <span class="sr-only">20% Complete</span>
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                  <!-- end task item -->
-                  <li><!-- Task item -->
-                    <a href="#">
-                      <h3>
-                        Donec id leo ut ipsum
-                        <small class="pull-right">70%</small>
-                      </h3>
-                      <div class="progress xs">
-                        <div class="progress-bar progress-bar-light-blue" style="width: 70%" role="progressbar"
-                             aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                          <span class="sr-only">70% Complete</span>
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                  <!-- end task item -->
-                  <li><!-- Task item -->
-                    <a href="#">
-                      <h3>
-                        Praesent vitae tellus
-                        <small class="pull-right">40%</small>
-                      </h3>
-                      <div class="progress xs">
-                        <div class="progress-bar progress-bar-yellow" style="width: 40%" role="progressbar"
-                             aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                          <span class="sr-only">40% Complete</span>
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                  <!-- end task item -->
-                  <li><!-- Task item -->
-                    <a href="#">
-                      <h3>
-                        Nam varius sapien
-                        <small class="pull-right">80%</small>
-                      </h3>
-                      <div class="progress xs">
-                        <div class="progress-bar progress-bar-red" style="width: 80%" role="progressbar"
-                             aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                          <span class="sr-only">80% Complete</span>
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                  <!-- end task item -->
-                  <li><!-- Task item -->
-                    <a href="#">
-                      <h3>
-                        Nunc fringilla
-                        <small class="pull-right">90%</small>
-                      </h3>
-                      <div class="progress xs">
-                        <div class="progress-bar progress-bar-primary" style="width: 90%" role="progressbar"
-                             aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                          <span class="sr-only">90% Complete</span>
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                  <!-- end task item -->
-                </ul>
-              </li>
-              <li class="footer">
-                <a href="#">View all tasks</a>
-              </li>
             </ul>
           </li>
 		  <!-- User Account -->
@@ -344,13 +210,8 @@
                   <div class="col-12 text-left">
                     <a href="#"><i class="ion ion-email-unread"></i> Inbox</a>
                   </div>
-                  <div class="col-12 text-left">
-                    <a href="#"><i class="ion ion-settings"></i> Setting</a>
-                  </div>
-				<div role="separator" class="divider col-12"></div>
-				  <div class="col-12 text-left">
-                    <a href="#"><i class="ti-settings"></i> Account Setting</a>
-                  </div>
+
+
 				<div role="separator" class="divider col-12"></div>
 				  <div class="col-12 text-left">
                     <a href="{% url 'logout' %}"><i class="fa fa-power-off"></i> Logout</a>
@@ -372,7 +233,7 @@
       <!-- Sidebar user panel -->
       <div class="user-panel">
 		 <div class="ulogo">
-			 <a href="index-2.html">
+			 <a href="{% url 'dashboard' %}">
 			  <!-- logo for regular state and mobile devices -->
 			  <span><b>Bitfonix </b>Admin</span>
 			</a>
@@ -702,7 +563,9 @@
 	<script src="{% static 'dashboard/js/template.js' %}"></script>
 	
 	<!-- Unique_admin dashboard demo (This is only for demo purposes) -->
-	<script src="{% static 'dashboard/js/pages/dashboard.js' %}"></script>
+  <script src="{% static 'dashboard/js/pages/dashboard.js' %}"></script>
+  <script src="{% static 'dashboard/js/jquery-3.5.1.min.js' %}"></script>
+  <script src="{% static 'dashboard/js/hidefield.js' %}"></script>
 	
 	<!-- Unique_admin for demo purposes -->
 	<script src="{% static 'dashboard/js/demo.js' %}"></script>
