--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -294,7 +294,7 @@
 						</div>
 						<div class="d-flex justify-content-between">
 							<a href="{% url 'deposit' %}"><button type="button" class="btn btn-outline btn-danger btn-lg"><i class="fa fa-arrow-circle-down"></i> DEPOSIT</button></a>
-							<button type="button" class="btn btn-outline btn-success btn-lg mt-0"><i class="fa fa-arrow-circle-up"></i> WITHDRAW</button>
+							<a href="{% url 'withdraw' %}"><button type="button" class="btn btn-outline btn-success btn-lg mt-0"><i class="fa fa-arrow-circle-up"></i> WITHDRAW</button></a>
 						</div>
 					</div>
 				</div>
@@ -407,18 +407,9 @@
 				  </div>
 				  <div class="row">
 					<div class="col-lg-6 col-12">
-					  <div class="box">
-						<div class="box-body">
-						  <div class="chart">
-							<div id="chartdiv3" class="h-200"></div>	
-						  </div>
-						</div>
-					  </div>			
-					</div>
-					<div class="col-lg-6 col-12">
 					  <a class="box box-link-pop text-center" href="javascript:void(0)">
 						<div class="box-body">
-							<p class="font-size-40 text-pink">
+							<p class="font-size-30 text-pink">
 								<i class="fa fa-money text-muted mr-5 mb-20"></i><br>
 								<strong>{{ user.balance }}$</strong>
 							</p>
