--- a/users/templates/registration/user_create.html
+++ b/users/templates/registration/user_create.html
@@ -140,7 +140,7 @@
                             </div>
                         </form>
                         <p class="loginhere">
-                            Have already an account ? <a href="#" class="loginhere-link">Login here</a>
+                            Have already an account ? <a href="{% url 'my-auth:login' %}" class="loginhere-link">Login here</a>
                         </p>
 					</div>
 					</div>
