solved delete on user == None

--- a/transactions/templates/transactions/withdrawal_form.html
+++ b/transactions/templates/transactions/withdrawal_form.html
@@ -29,7 +29,7 @@
         <div class="box-body">
           <div class="row">
             <div class="col">
-            	<form action="" method="POST">
+            	<form id="my-form" action="" method="POST">
 					{% csrf_token %}
 					<div class="form-group">
 						<h5>Fullname <span class="text-danger">*</span></h5>
